# 7552Grupo7

./: README.md
cliente/: Convesaciones.xcf  Logo.xcf  README.md  README.md~  UsuariosConectadosMenu.xcf  separadorMenu.xcf
cliente/Mensajero/: .gitignore  .gitignore~  local.properties
cliente/Mensajero/app/: .gitignore  app-release.apk  build.gradle  proguard-rules.pro
cliente/Releases/: app-debug-primer-checkpoint.apk
cliente/Releases/documentacion-cliente-primer-checkpoint/: annotated.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1anim.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1attr-members.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1attr.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1bool.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1color.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1dimen.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1drawable.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1id.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1integer.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1layout.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1string.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1style-members.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1style.html  classandroid_1_1support_1_1v7_1_1appcompat_1_1R_1_1styleable.html  classcom_1_1example_1_1appmaker_1_1mensajero_1_1ApplicationTest-members.html  (+109 more)
documentacion/: .~lock.Informe_Primer_Checkpoint.odt#  Informe_Primer_Checkpoint.odt  Makefile  README.md  tareas_cronograma.ods
documentacion/DocumentacionGenerada/: Informe.odt  MensajerO.apk
documentacion/doxygen/: .gitignore  README.md  cliente.config
documentacion/primer-checkpoint/: .~lock.Informe_Primer_Checkpoint.odt#  Informe_Primer_Checkpoint.odt
documentacion/segundo_checkpoint/: Informe_Segundo_Checkpoint.odt  app-release.apk
documentacion/source/: Administrador.rst  Cliente.rst  Database.rst  Mensajes.rst  Pantallas_Cliente.rst  Proyecto.rst  Servidor.rst  conf.py  index.rst
servidor/: .gitignore  Doxyfile  README.md  fotoBase64.txt
servidor/REST_tester/: REST api tester.html
servidor/src/: CMakeLists.txt  MainServer.cpp  Posicion.hpp  locaciones  server.cpp
servidor/src/dataService/: CMakeLists.txt  Conversacion.hpp  DataService.cpp  DataService.hpp  HardCodedDataService.cpp  HardCodedDataService.hpp  IDataService.hpp  Mensaje.hpp  UserProfile.hpp
servidor/src/dataService/db/: CMakeLists.txt  IDB.hpp  RocaDB.cpp  RocaDB.hpp
servidor/src/dataService/helpers/: Posicion.cpp  Posicion.hpp  Posicionador.cpp  Posicionador.hpp  SessionStateHandler.cpp  SessionStateHandler.hpp
servidor/src/dataService/model/: UserStatus.hpp
servidor/src/dataService/posicionaitor/: IPosicionador.hpp  Posicion.cpp  Posicionador.cpp  Posicionador.hpp
servidor/src/dataService/rocaDB/: CMakeLists.txt  IDB.hpp  RocaDB.cpp  RocaDB.hpp
servidor/src/helpers/: ICodec.hpp
servidor/src/libs/humblelogging/: CMakeLists.txt
servidor/src/libs/jsoncppLib/: CMakeLists.txt
servidor/src/mangosta/: CMakeLists.txt  MangostaServer.cpp  MangostaServer.hpp  mangostaServer.cpp  mangostaServer.hpp
servidor/src/mongooseLib/: CMakeLists.txt
servidor/src/responders/: AuthenticateUserRequest.cpp  AuthenticateUserRequest.hpp  AuthenticationHandler.cpp  AuthenticationHandler.hpp  CMakeLists.txt  Codec.hpp  CodecFactory.cpp  CodecFactory.hpp  EmptyRequest.cpp  EmptyRequest.hpp  ListUsersRequest.cpp  ListUsersRequest.hpp  RequestData.cpp  RequestData.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestHandlerFactory.cpp  RequestHandlerFactory.hpp  Response.cpp  Response.hpp  ResultData.cpp  ResultData.hpp
servidor/src/responders/customHandlers/: AuthenticateUserRequest.cpp  AuthenticateUserRequest.hpp  EmptyRequest.cpp  EmptyRequest.hpp  ListUsersRequest.cpp  ListUsersRequest.hpp
servidor/src/responders/handlers/: AuthenticateUserRequest.cpp  AuthenticateUserRequest.hpp  BroadcastHandler.cpp  BroadcastHandler.hpp  CheckinHandler.cpp  CheckinHandler.hpp  ConversationRequest.cpp  ConversationRequest.hpp  EditPerfilHandler.cpp  EditPerfilHandler.hpp  EmptyRequest.cpp  EmptyRequest.hpp  ListConversationsRequest.cpp  ListConversationsRequest.hpp  ListUsersRequest.cpp  ListUsersRequest.hpp  LoginRequest.cpp  LoginRequest.hpp  LogoutRequest.cpp  LogoutRequest.hpp  MessageHandler.cpp  MessageHandler.hpp  MessageRequest.cpp  MessageRequest.hpp  SendMessageHandler.cpp  SendMessageHandler.hpp  UserDataRequest.cpp  UserDataRequest.hpp  UserSignUpHandler.cpp  UserSignUpHandler.hpp
servidor/src/responders/handlers/dtos/: BaseDTO.cpp  BaseDTO.hpp  BroadcastDTO.cpp  BroadcastDTO.hpp  CheckinDTO.cpp  CheckinDTO.hpp  ConversationDTO.cpp  ConversationDTO.hpp  ListConversationsDTO.cpp  ListConversationsDTO.hpp  ListUsersDTO.cpp  ListUsersDTO.hpp  ListaMensajesDTO.cpp  ListaMensajesDTO.hpp  LoginDTO.cpp  LoginDTO.hpp  MensajeDTO.cpp  MensajeDTO.hpp  PerfilDTO.cpp  PerfilDTO.hpp  RegistrationDTO.cpp  RegistrationDTO.hpp  SentMensajeDTO.cpp  SentMensajeDTO.hpp  UserStatusDTO.cpp  UserStatusDTO.hpp
servidor/src/tests/: AuthenticationHandlerTester.cpp  CMakeLists.txt  CheckinHandlerTester.cpp  ConversacionDataServiceTester.cpp  ConversacionHandlerTester.cpp  DTOsTester.cpp  EditProfileHandlerTester.cpp  FactoryTester.cpp  JsonTester.cpp  ListUsersTester.cpp  LoginHandlerTester.cpp  MainLoggedTester.cpp  MainTester.cpp  MensajesDataServiceTester.cpp  MensajesRequestHandlerTester.cpp  RegistrationHandlerTester.cpp  RegistrationTester.cpp  RequestsHandlerTester.cpp  RequestsTester.cpp  ResponseTester.cpp  RocaDBMensajesTester.cpp  RocaDBTester.cpp  RocaDBUsuariosTester.cpp  SessionTester.cpp  SliceJsonTester.cpp  SumadorTests.cpp  UserDataDataServiceTester.cpp  UserDataRequestTester.cpp  jsonTester.cpp  mainTester.cpp  sumadorTests.cpp
servidor/src/tests/mocks/: MockedRequestHandler.cpp  MockedRequestHandler.hpp
servidor/src/tests/sumadorLib/: CMakeLists.txt  Sumador.cpp  Sumador.hpp  sumador.cpp
(+1616 files in other folders)
